--- a/Andzu/src/main/res/layout/activity_networklogdetail.xml
+++ b/Andzu/src/main/res/layout/activity_networklogdetail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -33,7 +33,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="@color/white"/>
 
@@ -41,9 +41,9 @@
             android:id="@+id/code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
             android:textColor="@color/white"/>
 
         <TextView
@@ -59,10 +59,10 @@
             android:id="@+id/code_img"
             android:layout_width="5dp"
             android:layout_height="50dp"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:background="@android:color/white"
-            android:layout_marginLeft="8dp"/>
+            android:layout_marginStart="8dp"/>
 
     </RelativeLayout>
 
@@ -79,29 +79,25 @@
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:background="?android:attr/selectableItemBackground"
-        android:orientation="vertical"
-        android:layout_below="@+id/relative1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Request latency : "
+            android:text="@string/request_latency"
             android:textSize="25sp"
             android:textColor="@color/white"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:id="@+id/textView2" />
 
         <TextView
             android:id="@+id/latency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="@string/textview"
             android:textSize="25sp"
             android:textColor="@color/white"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/textView2"
             android:layout_toEndOf="@+id/textView2" />
 
 
@@ -116,8 +112,8 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:text="Headers"
+        android:layout_marginStart="16dp"
+        android:text="@string/headers"
         android:layout_marginTop="5dp"
         android:textColor="@color/white"
         android:textSize="25sp" />
@@ -133,7 +129,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:text="asda"
+        android:text="@string/asda"
         android:layout_marginTop="5dp"
         android:textColor="@color/white"
         android:textSize="16sp" />
@@ -147,8 +143,8 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:text="Http Post Data"
+        android:layout_marginStart="16dp"
+        android:text="@string/http_post_data"
         android:layout_marginTop="5dp"
         android:textColor="@color/white"
         android:textSize="25sp" />
@@ -163,7 +159,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:text="asda"
+        android:text="@string/asda"
         android:layout_marginTop="5dp"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -178,8 +174,8 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:text="Body Response"
+        android:layout_marginStart="16dp"
+        android:text="@string/body_response"
         android:layout_marginTop="5dp"
         android:textColor="@color/white"
         android:textSize="25sp" />
@@ -201,4 +197,4 @@
 
 </LinearLayout>
 
-</android.support.v4.widget.NestedScrollView>
+</androidx.core.widget.NestedScrollView>
